--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,9 @@
         }
     },
     "require": {
-        "php": "~5.6"
+        "php": "~7.2"
     },
     "require-dev": {
-        "phpunit/phpunit": "^4.8"
+        "phpunit/phpunit": "7"
     }
 }
